Find: Problem with JS websites

--- a/web-browser-summariser/give-summary.ipynb
+++ b/web-browser-summariser/give-summary.ipynb
@@ -586,6 +586,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lack of support for Javascript\n",
+    "\n",
+    "You may notice that if you try `display_summary(\"https://openai.com\")` - it doesn't work! That's because OpenAI has a fancy website that uses Javascript. Selenium is a hugely popular framework that runs a browser behind the scenes, renders the page, and allows you to query it. It can be used to scrape websites that use Javascript."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Website Summary\n",
+       "\n",
+       "The website titled \"No title found\" is currently inaccessible, as it requires JavaScript and cookies to be enabled in order to display its contents. Without access to the specific details or information, it is impossible to provide a meaningful summary or overview of any potential news or announcements that may be present."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display_summary(\"https://openai.com\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
