Fix: Add support for JS based websites using selenium

--- a/web-browser-summariser/give-summary.ipynb
+++ b/web-browser-summariser/give-summary.ipynb
@@ -620,6 +620,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'selenium'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Parse webpages which is designed using JavaScript \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# download the chorme driver from here as per your version of chrome - https://developer.chrome.com/docs/chromedriver/downloads\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m webdriver\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mservice\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Service\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mby\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m By\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'selenium'"
+     ]
+    }
+   ],
+   "source": [
+    "#Parse webpages which is designed using JavaScript \n",
+    "# download the chorme driver from here as per your version of chrome - https://developer.chrome.com/docs/chromedriver/downloads\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "\n",
+    "PATH_TO_CHROME_DRIVER = '..\\\\path\\\\to\\\\chromedriver.exe'\n",
+    "\n",
+    "class Website:\n",
+    "    url: str\n",
+    "    title: str\n",
+    "    text: str\n",
+    "\n",
+    "    def __init__(self, url):\n",
+    "        self.url = url\n",
+    "\n",
+    "        options = Options()\n",
+    "\n",
+    "        options.add_argument(\"--no-sandbox\")\n",
+    "        options.add_argument(\"--disable-dev-shm-usage\")\n",
+    "\n",
+    "        service = Service(PATH_TO_CHROME_DRIVER)\n",
+    "        driver = webdriver.Chrome(service=service, options=options)\n",
+    "        driver.get(url)\n",
+    "\n",
+    "        input(\"Please complete the verification in the browser and press Enter to continue...\")\n",
+    "        page_source = driver.page_source\n",
+    "        driver.quit()\n",
+    "\n",
+    "        soup = BeautifulSoup(page_source, 'html.parser')\n",
+    "        self.title = soup.title.string if soup.title else \"No title found\"\n",
+    "        for irrelevant in soup([\"script\", \"style\", \"img\", \"input\"]):\n",
+    "            irrelevant.decompose()\n",
+    "        self.text = soup.get_text(separator=\"\\n\", strip=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
