Feat: Function to display summary using markdown

--- a/web-browser-summariser/summarise_webpage-open_source_llm.ipynb
+++ b/web-browser-summariser/summarise_webpage-open_source_llm.ipynb
@@ -269,10 +269,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A function to display this nicely in the Jupyter output, using markdown\n",
+    "\n",
+    "def display_summary(url):\n",
+    "    summary = summarize(url)\n",
+    "    display(Markdown(summary))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "display_summary(\"https://edwarddonner.com\")"
+   ]
   }
  ],
  "metadata": {
